--- a/imooc-security-broswer/pom.xml
+++ b/imooc-security-broswer/pom.xml
@@ -13,13 +13,14 @@
     <dependencies>
         <dependency>
             <groupId>com.imooc.security</groupId>
-            <artifactId>imooc-security</artifactId>
+            <artifactId>imooc-security-core</artifactId>
             <version>${imooc.security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
         </dependency>
+
     </dependencies>
 
 </project>
